# ceo-talk-monitor

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  config.yaml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-api.txt  requirements-worker.txt  schema.sql  vercel.json
.github/workflows/: ci.yml  cloud-ingest.yml  cloud-process.yml
apps/web/: next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.jsx  page.jsx
apps/web/lib/: api.js
docs/: backend_api_deployment.md  github_vercel_setup.md  operations.md  render_deployment.md  vercel_architecture.md
scripts/: sync_cloud_db.py
src/ceo_talk_monitor/: api.py  audio.py  cli.py  compare.py  config.py  db.py  embeddings.py  ingestion.py  jobs.py  models.py  prompts.py  relevance.py  schemas.py  summarizer.py  transcript.py  vector_store.py
src/ceo_talk_monitor/collectors/: podcast.py  youtube.py
