[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceo-talk-monitor"
version = "0.1.0"
description = "Nasdaq Top 10 CEO/CFO/COO interview monitor for YouTube and podcasts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "yt-dlp>=2025.1.15",
  "feedparser>=6.0.11",
  "faster-whisper>=1.0.3",
  "qdrant-client>=1.11.0",
  "fastembed>=0.4.2",
  "httpx>=0.27.0",
  "openai>=1.40.0"
]

[project.scripts]
ceo-talk = "ceo_talk_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

